adding UI first commit

--- a/index.html
+++ b/index.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>RPS Game</title>
+		<script src="logic.js"></script>
+		<link rel="stylesheet" href="style.css" />
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RPS Game</title>
-    <script src="logic.js"></script>
-</head>
-
-<body>
-
-</body>
-
+	<body>
+		<div id="header-div">
+			<header id="game-header">The Rock Paper Scissors game!!</header>
+		</div>
+		<div id="main">
+			<div>
+				<div>
+					<h1>Choose your weapon!</h1>
+				</div>
+			</div>
+			<div>
+				<div>
+					<img src="" alt="" />
+					<button type="button">Rock</button>
+				</div>
+				<div>
+					<img src="" alt="" />
+					<button type="button">Paper</button>
+				</div>
+				<div>
+					<img src="" alt="" />
+					<button type="button">Scissors</button>
+				</div>
+			</div>
+			<div>
+				<div>
+					<h2>dinamic result</h2>
+				</div>
+				<div>
+					<p>counter</p>
+				</div>
+			</div>
+		</div>
+		<footer>
+			<div>
+				<ul>
+					<li><a href="#">instagram</a></li>
+					<li><a href="#">tiktok</a></li>
+					<li><a href="#">linkedin</a></li>
+				</ul>
+			</div>
+			<div>
+				<ul>
+					<li><a href="#">source code</a></li>
+					<li><a href="#">github profile</a></li>
+				</ul>
+			</div>
+		</footer>
+	</body>
 </html>
