--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>RPS Game</title>
+		<script src="https://kit.fontawesome.com/c1dfb199ba.js" crossorigin="anonymous"></script>
 		<script src="logic.js"></script>
 		<link rel="stylesheet" href="style.css" />
 	</head>
@@ -13,48 +14,65 @@
 		<div id="header-div">
 			<header id="game-header">The Rock Paper Scissors game!!</header>
 		</div>
+		<!-- main begin -->
 		<div id="main">
-			<div>
-				<div>
-					<h1>Choose your weapon!</h1>
+			<div class="game-board">
+				<div id="main--title">
+					<div>
+						<h1 id="main--title__text">Choose your weapon:</h1>
+					</div>
 				</div>
-			</div>
-			<div>
-				<div>
-					<img src="" alt="" />
-					<button type="button">Rock</button>
+				<div id="weapon-selector">
+					<div class="weapons">
+						<img src="/img/Rock.png" alt="Rock" />
+						<input type="button" value="Rock"></input>
+					</div>
+					<div class="weapons">
+						<img src="/img/paper.png" alt="paper" />
+						<input type="button" value="Paper"></input>
+					</div>
+					<div class="weapons">
+						<img src="/img/scissors.png" alt="scissors" />
+						<input type="button" value="Scissors"></input>
+					</div>
 				</div>
-				<div>
-					<img src="" alt="" />
-					<button type="button">Paper</button>
+				<div id="score-board">
+					<div class="score-item">
+						<div class="score-title">Player</div>
+						<div class="score" id="player-score">00</div>
+					</div>
+					<div class="vs">vs</div>
+					<div class="score-item">
+						<div class="score-title">CPU</div>
+						<div class="score" id="cpu-score">00</div>
+					</div>
 				</div>
-				<div>
-					<img src="" alt="" />
-					<button type="button">Scissors</button>
-				</div>
-			</div>
-			<div>
-				<div>
-					<h2>dinamic result</h2>
-				</div>
-				<div>
-					<p>counter</p>
+				<div class="dynamic-container">
+					<div id="feedback">
+						Dynamic response
+					</div>
 				</div>
 			</div>
 		</div>
+		<!-- footer begin -->
 		<footer>
-			<div>
-				<ul>
-					<li><a href="#">instagram</a></li>
-					<li><a href="#">tiktok</a></li>
-					<li><a href="#">linkedin</a></li>
-				</ul>
-			</div>
-			<div>
-				<ul>
-					<li><a href="#">source code</a></li>
-					<li><a href="#">github profile</a></li>
-				</ul>
+			<div id="footer-container">
+				<div>
+					<div class="footer-divs">
+						<div class="round-btn"><a href="https://www.linkedin.com/in/jperez331/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></div>
+						<div class="round-btn"><a href="https://twitter.com/clotercillo331" target="_blank"><i class="fa-brands fa-twitter"></i></a></div>
+						<div class="round-btn"><a href="mailto: font3face@gmail.com"><i class="fa-brands fa-google"></i></a></div>
+					</div>
+				</div>
+				<div id="footer-text">
+					<p>Made by Joseloper 2022</p>
+				</div>
+				<div>
+					<div class="footer-divs">
+						<div class="round-btn"><a href="https://github.com/jperez331" target="_blank"><i class="fa-brands fa-github"></i></a></div>
+						<div class="round-btn"><a href="https://github.com/jperez331/RPS-Game" target="_blank"><i class="fa-solid fa-code"></i></a></div>
+					</div>
+				</div>
 			</div>
 		</footer>
 	</body>
