imgs fix and add endgame logic

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 				</div>
 				<div id="weapon-selector">
 					<div class="weapons">
-						<img src="/img/Rock.png" alt="Rock" />
+						<img src="https://i.postimg.cc/dtC6G8yL/Rock.png" alt="Rock" />
 						<input id="rckBtn" class="btn" onclick="game(event);" type="button" value="Rock"></input>
 					</div>
 					<div class="weapons">
-						<img src="/img/paper.png" alt="paper" />
+						<img src="https://i.postimg.cc/L4wvqyhc/paper.png" alt="paper" />
 						<input id="pprBtn" class="btn" onclick="game(event);" type="button" value="Paper"></input>
 					</div>
 					<div class="weapons">
-						<img src="/img/scissors.png" alt="scissors" />
+						<img src="https://i.postimg.cc/qvdLwzsQ/scissors.png" alt="scissors" />
 						<input id="scsBtn" class="btn" onclick="game(event);" type="button" value="Scissors"></input>
 					</div>
 				</div>
